--- a/iCareJava/src/iHealth/ui/Visualisation_DM_SM_View.form
+++ b/iCareJava/src/iHealth/ui/Visualisation_DM_SM_View.form
@@ -530,11 +530,11 @@
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace max="-2" attributes="0"/>
+                      <EmptySpace min="-2" max="-2" attributes="0"/>
                       <Component id="numberOne" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
                       <Component id="retourIcon" min="-2" pref="34" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
+                      <EmptySpace min="-2" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" attributes="0">
                               <Component id="jLabel6" min="-2" pref="94" max="-2" attributes="0"/>
@@ -543,14 +543,14 @@
                               <EmptySpace max="32767" attributes="0"/>
                           </Group>
                           <Group type="102" attributes="0">
-                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                              <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="jLabel10" alignment="0" min="-2" max="-2" attributes="0"/>
                                   <Component id="titreLabel" alignment="0" max="32767" attributes="0"/>
                                   <Component id="redactionLabel" alignment="0" pref="151" max="32767" attributes="0"/>
                               </Group>
                               <EmptySpace min="-2" pref="509" max="-2" attributes="0"/>
                               <Component id="dateLabel" pref="244" max="32767" attributes="0"/>
-                              <EmptySpace pref="210" max="32767" attributes="0"/>
+                              <EmptySpace min="-2" pref="210" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="jScrollPane1" min="-2" pref="1094" max="-2" attributes="0"/>
